--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test-routes": "npm run test -t router",
     "test-models": "npm run test -t model",
     "test-controllers": "npm run test -t controllers",
+    "test-crud": "npm run test -t crud",
     "test-auth": "npm run test -t Authentication:",
     "dev": "nodemon --exec npm run restart",
     "restart": "rimraf dist && npm run build && npm run start",
